Model updates and UI changes...lots of things cuz I can

--- a/sample-app-node/views/companies/list.pug
+++ b/sample-app-node/views/companies/list.pug
@@ -3,4 +3,5 @@ extends ../layout
 block content
 	ul
 		each company in companies
-			li #{company.id}
+			li 
+				a(href=`/companies/${company.id}`) #{company.Name}
