--- a/sample-app-node/views/navigation.pug
+++ b/sample-app-node/views/navigation.pug
@@ -1,4 +1,4 @@
-.navbar.navbar-inverse.navbar-fixed-top
+nav.navbar.navbar-dark.bg-dark
 	.container(style="margin: 0; padding-left: 0; padding-right: 0;position: relative; left: 6%; right: 6%; top: 0;")
 		.navbar-header
 			button(type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse")
