--- a/sample-app-node/views/layout.pug
+++ b/sample-app-node/views/layout.pug
@@ -17,13 +17,11 @@ html
 		title= title
 	body
 		include navigation.pug
-		.container.body-content
-			div(style="background-image: url('/stylesheets/DeathtoStock_Desk7.jpg'); height:1080px; width: 1920px;max-width: 100%; max-height: 100%; background-repeat: no-repeat; background-size:cover; position: absolute; left: 0; top: 0; opacity: .6; overflow-x: hidden; overflow-y: hidden;")
-				.overlay(style="height:1080px; width: 1920px;max-width: 100%;max-height: 100%;  background-color: #000; opacity: .6; position: absolute; left: 0; top: 0; overflow-x: hidden;overflow-y: hidden;")
-					block content
+		.container
+			block content
 	  
-				footer.footer-layout
-					p &copy; 2019 - Contoso Jobs
+		footer.footer-layout
+			p &copy; 2019 - Contoso Jobs
 		script( src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js")
 		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
 		script(type="text/javascript" src="/javascripts/jquery.js")
